--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,3 @@
-Django==4.2.7
-# Librerías opcionales para predicciones (descomenta si las usas):
-# scikit-learn==1.3.0
-# pandas==2.0.3
-# numpy==1.24.3
-# djangorestframework==3.14.0  # Si agregas APIs
+Django
+pandas
+openpyxl
